updating html and css file

--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enjoy My Quiz!</title>
-    <link src="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Lobster&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <div class="container">
-        <div id="homepage"> 
+        <div id="homepage" class="column-center">
             <h1>Click Start to Begin Quiz!</h1>
+
+            <a href="/quizgame.html" class="playbutton">Play</a>
+
+            <a href="/highscore.html" class="playbutton" id="highscore-button">High Scores</a>
+            
         </div>
     </div>
 
