updated game and index html

--- a/game.html
+++ b/game.html
@@ -24,9 +24,30 @@
             <p>This is where the questions are going to be</p>
         </div>
 
-        
-
     </div>
+
+    <div class="answer-container">
+        <div class="answers">
+            <p class="choices">A</p>
+            <P class="choice-text">1</P>
+        </div>
+
+        <div class="answers">
+            <p class="choices">B</p>
+            <P class="choice-text">2</P>
+        </div>
+
+        <div class="answers">
+            <p class="choices">C</p>
+            <P class="choice-text">3</P>
+        </div>
+
+        <div class="answers">
+            <p class="choices">D</p>
+            <P class="choice-text">4</P>
+        </div>
+    </div>
+    <script src="script.js"></script>
     
 </body>
 </html>
